# mybitwarden

./: .env.example  .envmakerconfig.example  .gitignore  READEME.md  README.md  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docs.yml
docs/: bw.md  commands.md  configuration.md  getting-started.md  index.md
envmaker/: __init__.py  bitwarden.py  cli.py  config.py  env_file.py  fetch_bitwarden.py
r/: bitwarden.R
tests/: conftest.py  test_bitwarden.py  test_cli.py  test_config.py  test_env_file.py
