[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "envmaker"
version = "0.1.0"
description = "Generate .env files from Bitwarden secrets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.0",
    "python-dotenv>=1.0",
]

[project.scripts]
envmaker = "envmaker.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["envmaker"]
